force-app/main/default/objects/Account/fields/Account_Approved__c.field-meta.xml
<CustomField>
    <fullName>Account_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story 468567: Prospect Account Approval Process</description>
    <label>Account Approved</label>
    <type>Checkbox</type>
</CustomField>