force-app/main/default/objects/Account/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <description>Used for Reports with related objects to sum up Accounts instead of the related objects (which is what it counts in Record Count on reports with child objects).</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>