force-app/main/default/objects/Account/fields/Account_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Account_Drivers__c</fullName>
    <label>Account Drivers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand (Brand specific - Chevy, Ford, etc.)</fullName>
            </value>
            <value>
                <fullName>Price (bargain hunter)</fullName>
            </value>
            <value>
                <fullName>Relationship (promotion/deals)</fullName>
            </value>
            <value>
                <fullName>Convenience (technology and self-serve/easy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>