force-app/main/default/objects/Account/fields/Account_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>