force-app/main/default/objects/Account/fields/Account_Owner_Requester__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>