force-app/main/default/objects/Account/fields/Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Name__c</fullName>
    <description>Used in Opportunity Naming Convention as well as aiding in searches for Accounts&apos; with &quot;commonly referred to&quot; names. For Example: International Business Machines and IBM</description>
    <inlineHelpText>Used in Opportunity Naming Convention as well as aiding in searches for Accounts&apos; with &quot;commonly referred to&quot; names. For Example: International Business Machines and IBM</inlineHelpText>
    <label>Account Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>