force-app/main/default/objects/Account/fields/ACH_Setup__c.field-meta.xml
<CustomField>
    <fullName>ACH_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if ACH is enabled for this account</description>
    <inlineHelpText>Idenifies if ACH is enable for this account</inlineHelpText>
    <label>ACH Setup</label>
    <type>Checkbox</type>
</CustomField>