force-app/main/default/objects/Account/fields/Active_Inventory_Management__c.field-meta.xml
<CustomField>
    <fullName>Active_Inventory_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provider uses Active Inventory Management portal</description>
    <inlineHelpText>Provider uses Active Inventory Management portal</inlineHelpText>
    <label>Active Inventory Management</label>
    <type>Checkbox</type>
</CustomField>