force-app/main/default/objects/Account/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Actual cash value of a vehicle</description>
    <label>ACV</label>
    <length>40</length>
    <type>Text</type>
</CustomField>