force-app/main/default/objects/Account/fields/Add_Broker_fee__c.field-meta.xml
<CustomField>
    <fullName>Add_Broker_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add_Broker_fee</label>
    <type>Checkbox</type>
</CustomField>