force-app/main/default/objects/Account/fields/Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services__c</fullName>
    <description>For Licensed Broker List on Help Community</description>
    <label>Additional Services</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>