force-app/main/default/objects/Account/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>