force-app/main/default/objects/Account/fields/Age_of_business__c.field-meta.xml
<CustomField>
    <fullName>Age_of_business__c</fullName>
    <inlineHelpText>Age of business</inlineHelpText>
    <label>Age of business</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>