force-app/main/default/objects/Account/fields/AM_Best_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Best_Name__c</fullName>
    <description>Only needed on Parent Account</description>
    <inlineHelpText>Only needed on Parent Account</inlineHelpText>
    <label>AM Best Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>