force-app/main/default/objects/Account/fields/Annual_Ancillary_Sold_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Ancillary_Sold_Goal__c</fullName>
    <inlineHelpText>Overall goal of ancillary products for current year.</inlineHelpText>
    <label>Annual Ancillary Sold Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>