force-app/main/default/objects/Account/fields/Annual_Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Goal__c</fullName>
    <label>Annual Revenue Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>