force-app/main/default/objects/Account/fields/Annual_Total_Buyers_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_Buyers_Goal__c</fullName>
    <inlineHelpText>Number of buyers for current year goal</inlineHelpText>
    <label>Annual Total # Buyers Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>