force-app/main/default/objects/Account/fields/Annual_Vehicles_Sold_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Vehicles_Sold_Goal__c</fullName>
    <inlineHelpText>Number of vehicles for current year goal</inlineHelpText>
    <label>Annual Vehicles Sold Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>