force-app/main/default/objects/Account/fields/ao2__Add_to_CS__c.field-meta.xml
<CustomField>
    <fullName>ao2__Add_to_CS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Add to Company Structure chart</inlineHelpText>
    <label>Add to CS</label>
    <type>Checkbox</type>
</CustomField>