force-app/main/default/objects/Account/fields/ao2__AO_Idea_Module__c.field-meta.xml
<CustomField>
    <fullName>ao2__AO_Idea_Module__c</fullName>
    <label>AO-Idea Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>