force-app/main/default/objects/Account/fields/ao2__AO_Opportunities_Map__c.field-meta.xml
<CustomField>
    <fullName>ao2__AO_Opportunities_Map__c</fullName>
    <label>AO-Opportunities Map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>