force-app/main/default/objects/Account/fields/ao2__Scorecard_Average_Score__c.field-meta.xml
<CustomField>
    <fullName>ao2__Scorecard_Average_Score__c</fullName>
    <label>Scorecard Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>