force-app/main/default/objects/Account/fields/API_Buyer_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Buyer_Id__c</fullName>
    <externalId>true</externalId>
    <label>API Buyer Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>