force-app/main/default/objects/Account/fields/ApprovalCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalCreationDate__c</fullName>
    <label>ApprovalCreationDate</label>
    <type>Date</type>
</CustomField>