force-app/main/default/objects/Account/fields/ApprovalCreationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApprovalCreationDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>ApprovalCreationDateTime</label>
    <type>DateTime</type>
</CustomField>