force-app/main/default/objects/Account/fields/Approved_by_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Supervisor</label>
    <type>Checkbox</type>
</CustomField>