force-app/main/default/objects/Account/fields/Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_Id__c</fullName>
    <label>Approver Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>