force-app/main/default/objects/Account/fields/ASAP_ID_No_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ASAP_ID_No_Prefix__c</fullName>
    <description>ASAP ID is also referred to as SPID, Tower ASAP ID, and Buyer ID.</description>
    <inlineHelpText>ASAP ID is also referred to as SPID, Tower ASAP ID, and Buyer ID.</inlineHelpText>
    <label>ASAP ID (No Prefix)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>