force-app/main/default/objects/Account/fields/ASAP_ID_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ASAP_ID_Prefix__c</fullName>
    <description>ASAP ID with account type prefix. (Buy, PRO, TOW)</description>
    <inlineHelpText>ASAP ID with account type prefix. (Buy, PRO, TOW)</inlineHelpText>
    <label>ASAP ID (Prefix)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>