force-app/main/default/objects/Account/fields/ASAP_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Sync_Error__c</fullName>
    <formula>IF (  (now()- Last_ASAP_Sync_Error_Date_Time__c )&lt;= 2 ,  IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0680r000001an0g&amp;operationContext=CHATTER&amp;contentId=05T0r000004ndmS&quot;, &quot;alert&quot;, 20,20), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0680r000001an0f&amp;operationContext=CHATTER&amp;contentId=05T0r000004ndmN&quot;,&quot;checked&quot;, 20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag if ASAP sync error happened in the last 2 days</inlineHelpText>
    <label>ASAP Sync Error</label>
    <type>Text</type>
</CustomField>