force-app/main/default/objects/Account/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <description>Assigned Type. E.g., Bid Fast Assignment or Standard.</description>
    <label>Assignment Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>