force-app/main/default/objects/Account/fields/Association_Member__c.field-meta.xml
<CustomField>
    <fullName>Association_Member__c</fullName>
    <label>Association Member</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>