force-app/main/default/objects/Account/fields/AuctionAccess_Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Buyer_Type__c</fullName>
    <label>AuctionAccess Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>