force-app/main/default/objects/Account/fields/AuctionAccess_Buyer_Type_Form__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Buyer_Type_Form__c</fullName>
    <formula>IF( 
    !ISBLANK(AuctionAccess_Company_Id__c) &amp;&amp; TEXT(AuctionAccess_Buyer_Type__c) = &quot;0&quot;, &quot;Dealer Only&quot;,
    IF (
        !ISBLANK(AuctionAccess_Company_Id__c) &amp;&amp; TEXT(AuctionAccess_Buyer_Type__c) = &quot;1&quot;, &quot;Multi-License&quot;, &quot;Not Applicable&quot;))</formula>
    <label>AuctionAccess Buyer Type</label>
    <type>Text</type>
</CustomField>