force-app/main/default/objects/Account/fields/AuctionAccess_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Company_Id__c</fullName>
    <label>AuctionAccess Company Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>