force-app/main/default/objects/Account/fields/AuctionAccess_Unlink_Date__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Unlink_Date__c</fullName>
    <label>AuctionAccess Unlink Date</label>
    <type>DateTime</type>
</CustomField>