force-app/main/default/objects/Account/fields/AuctionAccess_Unlink_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Unlink_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuctionAccess Unlink Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>