force-app/main/default/objects/Account/fields/AuctionAccess_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Validation_Message__c</fullName>
    <label>AA Validation Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>