force-app/main/default/objects/Account/fields/AuctionAccess_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>AuctionAccess_Validation_Status__c</fullName>
    <label>AA Validation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>