force-app/main/default/objects/Account/fields/AuthUserKey__c.field-meta.xml
<CustomField>
    <fullName>AuthUserKey__c</fullName>
    <description>This is the unique identifier for a guest/buyer</description>
    <externalId>true</externalId>
    <label>Auth User Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>