force-app/main/default/objects/Account/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>For Licensed Broker List on Help Community</description>
    <label>Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Licensed Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>