force-app/main/default/objects/Account/fields/Behavioral_Segment__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Segment__c</fullName>
    <label>Behavioral Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>