force-app/main/default/objects/Account/fields/BI_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_ID__c</fullName>
    <description>This is placeholder for a BI related ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is placeholder for a BI related ID.</inlineHelpText>
    <label>BI ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>