force-app/main/default/objects/Account/fields/Bidder_count__c.field-meta.xml
<CustomField>
    <fullName>Bidder_count__c</fullName>
    <inlineHelpText>Number of active bidders</inlineHelpText>
    <label>Bidder count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>