force-app/main/default/objects/Account/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>Account billing country</description>
    <inlineHelpText>Account billing country</inlineHelpText>
    <label>Billing Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>