force-app/main/default/objects/Account/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>Account billing state</description>
    <inlineHelpText>Account billing state</inlineHelpText>
    <label>Billing State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>