force-app/main/default/objects/Account/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <description>Account billing street</description>
    <inlineHelpText>Account billing street</inlineHelpText>
    <label>Billing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>