force-app/main/default/objects/Account/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <description>Formula field related to Manager on Branch object lookup</description>
    <inlineHelpText>Formula field related to Manager on Branch object lookup</inlineHelpText>
    <label>Branch Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>