force-app/main/default/objects/Account/fields/Branchnumber_c__c.field-meta.xml
<CustomField>
    <fullName>Branchnumber_c__c</fullName>
    <formula>Branch__r.Branch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch #</label>
    <type>Text</type>
</CustomField>