force-app/main/default/objects/Account/fields/Broker_Information__c.field-meta.xml
<CustomField>
    <fullName>Broker_Information__c</fullName>
    <label>Broker Information</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>