force-app/main/default/objects/Account/fields/Broker_Owner__c.field-meta.xml
<CustomField>
    <fullName>Broker_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>