force-app/main/default/objects/Account/fields/Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Broker_Phone__c</fullName>
    <description>Phone numbers to be displayed for the broker account on Broker Listing - IAA Help</description>
    <label>Broker Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>