force-app/main/default/objects/Account/fields/Brokers__c.field-meta.xml
<CustomField>
    <fullName>Brokers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do they use Brokers</inlineHelpText>
    <label>Brokers</label>
    <type>Checkbox</type>
</CustomField>