force-app/main/default/objects/Account/fields/Business_Date_Ran__c.field-meta.xml
<CustomField>
    <fullName>Business_Date_Ran__c</fullName>
    <label>Business Date Ran</label>
    <type>DateTime</type>
</CustomField>