force-app/main/default/objects/Account/fields/Business_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Response_Code__c</fullName>
    <label>Business Response Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Review</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Technical</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>