force-app/main/default/objects/Account/fields/Business_Response_Desc__c.field-meta.xml
<CustomField>
    <fullName>Business_Response_Desc__c</fullName>
    <label>Business Response Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>